--- a/style.css
+++ b/style.css
@@ -30,8 +30,9 @@
 }
 
 .magistral {
+	margin-top: 10px;
 	padding: 10px;
-	background-color: black;
+	/* background-color: black; */
 	color: white;
 	width: fit-content;
 }
