--- a/style.css
+++ b/style.css
@@ -31,18 +31,18 @@
 
 .magistral {
    display: flex;
-   margin-top: 10px;
+   margin-top: 100px;
    margin-left: 10px;
    position: relative;
 	width: fit-content;
 }
 
-.road {
+.magistral__road {
    width: 134px;
    height: 100px;
 }
 
-.train {
+.magistral__train {
    position: absolute;
    top: 30px;
    left: 0;
@@ -53,8 +53,8 @@
 
 .magistral__sity {
    position: absolute;
-   top: -30px;
-   display: flex;
+   top: -35px;
+	font-weight: 700;
 	
 }
 .magistral__sity::before {
@@ -64,6 +64,14 @@
    height: 120px;
    width: 3px;
    background-color: lightcoral;
+}
+
+.magistral__timer {
+	display: none;
+	position: absolute;
+	top: -55px;
+	left: 0;
+	color: #333;
 }
 
 .elevator {
